--- a/views/partials/head.twig
+++ b/views/partials/head.twig
@@ -1,6 +1,6 @@
 <head>
     <meta charset="{{ site.charset }}" />
-    <link rel="stylesheet" href="{{ site.theme.link }}/dist/css/demo-theme.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ site.theme.link }}/dist/css/demo-theme.min.css" type="text/css" media="screen" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     {% do action('get_header') %}
